[package]
name = "slide_puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
getch = "0.3.1"
nalgebra = "0.32.4"
pheap = "0.3.0"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
termion = "3.0.0"
